Proper fix for the nlet highlighting. Now allows for loose aiming and always starts the patch cord at the center of the outlet. Inlets from which we currently cannot connect from are grey when highlighted, while ones you can initiate connection from are orange (both colors are themeable inside the css). Also, if trying to connect an impossible connection (signal to non-signal), when hovering over the non-signal inlet during the connection cycle, such an inlet will be also highlighted gray (grey? whatever...). Lastly, updated the highlighting animation--I am really not particularly interested in animation as it tends to slow down the interaction with the patch, so the animation is much shorter and more minimal. Potential value is leaving it as this to provide visibility of the nlet being highlighted when we are already over it with the cursor, which will otherwise occlude the nlet altogether. Another consideration with the currently committed highlight is that it is hollow inside which looks IMO distracting. Curved edges is also distracting since no other aspect of the UI (save for the customized data structures created by the user) is not curved.

--- a/pd/nw/css/default.css
+++ b/pd/nw/css/default.css
@@ -471,22 +471,12 @@ text {
    for every pixel we move inside an xlet. */
 @-webkit-keyframes fizzle {
     0% {
-        stroke-width: 1;
-        stroke-opacity: 1;
-        rx: 1;
-        ry: 1;
-    }
-    33% {
         stroke-width: 12;
         stroke-opacity: 1;
-        rx: 1;
-        ry: 1;
     }
-    66% {
+    100% {
         stroke-width: 5;
         stroke-opacity: 1;
-        rx: 1;
-        ry: 1;
     }
 }
 
@@ -495,7 +485,12 @@ text {
     stroke: #e87216;
     fill: #e87216;
     stroke-width: 5;
-    -webkit-animation: fizzle 0.4s ease-in 1;
+    -webkit-animation: fizzle 0.1s ease-in 1;
+}
+
+.xlet_disabled {
+    stroke: gray !important;
+    fill: gray !important;
 }
 
 #canvas_find {
